# OnlineJudge

./: .gitignore  CMakeLists.txt  build.gradle.kts  gen-cmake.sh  new  settings.gradle.kts
LeetCode/: CMakeLists.txt  Problem Lists
LeetCode/0. Template/: Solution.cc  Solution.kt
LeetCode/1. Two Sum/: Solution.cc  Solution.kt  Solution2.kt  Solution3.kt  Solution4.kt
LeetCode/1002. Find Common Characters/: Solution.kts  Solution2.kts
LeetCode/102. Binary Tree Level Order Traversal/: Solution.kt
LeetCode/103. Binary Tree Zigzag Level Order Traversal/: Solution.kt
LeetCode/1122. Relative Sort Array/: Solution.kt  Solution2.kt
LeetCode/1137. N-th Tribonacci Number/: Solution.kt
LeetCode/1143. Longest Common Subsequence/: Solution.kt
LeetCode/115. Distinct Subsequences/: Solution.kt  Solution2.kt
LeetCode/12. Integer to Roman/: Solution.kt
LeetCode/120. Triangle/: Solution.kt
LeetCode/1203. Sort Items by Groups Respecting Dependencies/: Solution.kt
LeetCode/124. Binary Tree Maximum Path Sum/: Solution.cc  Solution.kt
LeetCode/127. Word Ladder/: Solution.kt
LeetCode/1298. Maximum Candies You Can Get from Boxes/: Solution.kt
LeetCode/13. Roman to Integer/: Solution.cc  Solution.kt
LeetCode/130. Surrounded Regions/: Solution.cpp
LeetCode/1311. Get Watched Videos by Your Friends/: Solution.kt
LeetCode/1334. Find the City With the Smallest Number of Neighbors at a Threshold Distance/: Solution-Floyd-opt.kt  Solution-Floyd.kt  Solution-dijkstra.kt
LeetCode/136. Single Number/: Solution.cpp  Solution.py
LeetCode/139. Word Break/: Solution.kt  Solution2.kt
LeetCode/14. Longest Common Prefix/: Solution.kt
LeetCode/140. Word Break II/: Solution.kt
LeetCode/146. LRU Cache/: LRUCache.cpp  LRUCache.java
LeetCode/1462. Course Schedule IV/: Solution.kt
LeetCode/149. Max Points on a Line/: Solution.kts  x
LeetCode/15. 3Sum/: Solution.kt  Solution2.kt  Solution3.kt  Solution4.kt
LeetCode/1557. Minimum Number of Vertices to Reach All Nodes/: Solution.kt
LeetCode/16. 3Sum Closest/: Solution-opt.kt  Solution.kt
LeetCode/1631. Path With Minimum Effort/: Solution-Dijkstra.kt
LeetCode/17. Letter Combinations of a Phone Number/: Solution-opt.kt  Solution-opt2.kt  Solution.kt
LeetCode/173. Binary Search Tree Iterator/: Solution.kts
LeetCode/191. Number of 1 Bits/: Solution.cpp  Solution.java
LeetCode/1964. Find the Longest Valid Obstacle Course at Each Position/: Attempt.kt
LeetCode/1971. Find if Path Exists in Graph/: Solution.kt
LeetCode/198. House Robber/: Solution.cc  Solution.kt  Solution1.kt  Solution2.cc  Solution2.kt
LeetCode/2. Add Two Numbers/: Solution.cpp  Solution.kt
LeetCode/201. Bitwise AND of Numbers Range/: Solution.cpp  Solution.java
LeetCode/2039. The Time When the Network Becomes Idle/: Solution.kt
LeetCode/207. Course Schedule/: Attempt.kt  Solution-DAG-BFS.kt  Solution-DAG-DFS.kt  Solution-DAG.kt
LeetCode/2092. Find All People With Secret/: Attempt.kt  Solution-DFS.kt  Solution-DisjointSet.kt  Solution.kt  test-case-37.txt
LeetCode/210. Course Schedule II/: Solution-DAG-DFS.kt
LeetCode/2101. Detonate the Maximum Bombs/: Attempt-DisjointSet.kt  Solution-DFS.kt
LeetCode/2115. Find All Possible Recipes from Given Supplies/: Solution.kt
LeetCode/212. Word Search II/: Solution.java  Solution.kts  Solution1.kts  dest.txt
LeetCode/2192. All Ancestors of a Node in a Directed Acyclic Graph/: Solution.kt
LeetCode/221. Maximal Square/: Solution.kt  Solution2.kt
LeetCode/23. Merge k Sorted Lists/: Solution.cc  Solution.kt
LeetCode/240. Search a 2D Matrix II/: Solution.kt
LeetCode/2608. Shortest Cycle in a Graph/: Attempt.kt  Solution-BFS.kt
LeetCode/273. Integer to English Words/: Solution.java
LeetCode/279. Perfect Squares/: Solution.kt
LeetCode/300. Longest Increasing Subsequence/: Solution.kt  Solution2.kt
LeetCode/31. Next Permutation/: Solution.ws.kts
LeetCode/3115. Maximum Prime Difference/: Solution-opt.kt  Solution.kt
LeetCode/319. Bulb Switcher/: Solution.kts  conclusion.txt
LeetCode/337. House Robber III/: Solution.cc  Solution.kt
LeetCode/354. Russian Doll Envelopes/: Attempt.kt
LeetCode/377. Combination Sum IV/: Solution.kt
LeetCode/393. UTF-8 Validation/: Solution.kt
LeetCode/4. Median of Two Sorted Array(wip)/: Solution-O(N).kt  Solution.kt
LeetCode/407. Trapping Rain Water II(wip)/: Solution.kt  Solution2.kt  Solution3.kt
LeetCode/42. Trapping Rain Water/: Solution.ws.kts  Solution2.ws.kts  Solution3.ws.kts  Solution4.kt  solution.cc  solution2.cc
LeetCode/46. Permutations/: Solution.kt
LeetCode/460. LFU Cache/: Solution.cc  Solution.kt  Solution.kts  Solution1.kt  (+2 more)
(+70 files in other folders)
